--- a/index.html
+++ b/index.html
@@ -469,9 +469,9 @@
                             </svg>
                         </a>
                     </li>
-
                 </ul>
             </div>
+            <p class="footer-text1">Handcrafted by &copy; me Abdusodir Mamadjonov</p>
         </div>
     </footer>
 
